IVYPORTAL-11673 Various or urgent requests in IVYPORTAL S203 - IVYPORTAL-11660: Fix alignment in Express

--- a/AxonIvyPortal/AxonIvyExpress/webContent/resources/css/portal_express.css
+++ b/AxonIvyPortal/AxonIvyExpress/webContent/resources/css/portal_express.css
@@ -601,10 +601,6 @@ td.email-attachment-text {
   min-width: 165px;
 }
 
-.approval-comment-container {
-  margin: auto 16px;
-}
-
 .approval-result-table {
   margin: auto 14px;
 }
